--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <h1>Студенти</h1>
-    <div class="container">
-        
-    </div>
+    <div class="container" style="display: flex;"></div>
     <button type="button" id="btnFilterAge">Відфільтрувати за віком</button>
     <button type="button" id="btnFilterGrade">Відфільтрувати за класом</button>
 
