--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <button type="button" id="btnFilterAge">Відфільтрувати за віком</button>
     <button type="button" id="btnFilterGrade">Відфільтрувати за класом</button>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
